Updates to Luhman 16 plots

--- a/DENIS_J0255/figure_chemistry_PT.ipynb
+++ b/DENIS_J0255/figure_chemistry_PT.ipynb
@@ -226,6 +226,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  analysing data from ./retrieval_outputs/DENIS_J0255_wo_CH4/test_.txt\n",
+      "(4265, 31)\n",
+      "  analysing data from ./retrieval_outputs/DENIS_J0255_wo_NH3/test_.txt\n",
+      "(4365, 31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = read_results(\n",
+    "    prefix='./retrieval_outputs/DENIS_J0255_wo_CH4/test_', n_params=31\n",
+    "    )\n",
+    "posterior_wo_CH4, *_ = res\n",
+    "del res\n",
+    "\n",
+    "res = read_results(\n",
+    "    prefix='./retrieval_outputs/DENIS_J0255_wo_NH3/test_', n_params=31\n",
+    "    )\n",
+    "posterior_wo_NH3, *_ = res\n",
+    "del res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "183.6681548180839 [-39.53751907  61.31263935]\n",
+      "185.9680445666921 [-40.02186723  60.63696985]\n",
+      "166.25345730261472 [-39.24475091  70.80668091]\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = np.array([\n",
+    "    0.5-0.997/2, 0.5-0.95/2, 0.5-0.68/2, 0.5, \n",
+    "    0.5+0.68/2, 0.5+0.95/2, 0.5+0.997/2\n",
+    "    ])\n",
+    "print(\n",
+    "    np.nanmedian(10**(posterior_1[:,16] - posterior_1[:,20])), \n",
+    "    np.quantile(10**(posterior_1[:,16] - posterior_1[:,20]), q=q[[2,4]]) - np.nanmedian(10**(posterior_1[:,16] - posterior_1[:,20]))\n",
+    "    )\n",
+    "print(\n",
+    "    np.nanmedian(10**(posterior_wo_NH3[:,16] - posterior_wo_NH3[:,19])), \n",
+    "    np.quantile(10**(posterior_wo_NH3[:,16] - posterior_wo_NH3[:,19]), q=q[[2,4]]) - np.nanmedian(10**(posterior_wo_NH3[:,16] - posterior_wo_NH3[:,19]))\n",
+    "    )\n",
+    "print(\n",
+    "    np.nanmedian(10**(posterior_wo_CH4[:,16] - posterior_wo_CH4[:,19])), \n",
+    "    np.quantile(10**(posterior_wo_CH4[:,16] - posterior_wo_CH4[:,19]), q=q[[2,4]]) - np.nanmedian(10**(posterior_wo_CH4[:,16] - posterior_wo_CH4[:,19]))\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -255,6 +319,28 @@
     "envelope_cmap_2, envelope_colors_2 = get_env_colors(posterior_color_2)\n",
     "envelope_cmap_3, envelope_colors_3 = get_env_colors(posterior_color_3)\n",
     "envelope_cmap_4, envelope_colors_4 = get_env_colors(posterior_color_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper K_zz < 1.122e+09 cm s^-2\n",
+      "Upper K_zz < 1.385e+09 cm s^-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "upper_K_zz = 2.5e10 * (1400/600)**(8/3) * (1000/10**bestfit_params_2['params']['log_g'])\n",
+    "print('Upper K_zz < {:.3e} cm s^-2'.format(upper_K_zz))\n",
+    "\n",
+    "upper_K_zz = 2.5e10 * (1400/600)**(8/3) * (1000/10**bestfit_params_4['params']['log_g'])\n",
+    "print('Upper K_zz < {:.3e} cm s^-2'.format(upper_K_zz))"
    ]
   },
   {
@@ -563,18 +649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_65685/2606121561.py:6: RuntimeWarning: overflow encountered in power\n",
+      "/tmp/ipykernel_82916/2606121561.py:6: RuntimeWarning: overflow encountered in power\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) \\\n",
-      "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4573: RuntimeWarning: invalid value encountered in subtract\n",
+      "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4655: RuntimeWarning: invalid value encountered in subtract\n",
       "  diff_b_a = subtract(b, a)\n",
-      "/tmp/ipykernel_65685/2606121561.py:6: RuntimeWarning: overflow encountered in divide\n",
+      "/tmp/ipykernel_82916/2606121561.py:6: RuntimeWarning: overflow encountered in divide\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) \\\n"
      ]
     }
@@ -592,46 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267 0.18225267\n",
-      " 0.18225267 0.18165906 0.17971882 0.18208659 0.20871771 0.2602384\n",
-      " 0.33664543 0.41679769 0.45924205 0.44912051 0.39249201 0.33389452\n",
-      " 0.25728893 0.31247203]\n",
-      "[ 0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632  0.20741632\n",
-      "  0.20741632  0.20741632  0.20741632  0.14086561 -0.03354326 -0.06732967\n",
-      "  0.16258664  0.89263322]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.log10(Chem_2.mass_fractions_envelopes['NH3_coles_main_iso'][3]) - \\\n",
-    "    np.log10(Chem_1.mass_fractions_envelopes['NH3_coles_main_iso'][3])\n",
-    "    )\n",
-    "print(np.log10(Chem_4.mass_fractions_envelopes['NH3_coles_main_iso'][3]) - \\\n",
-    "    np.log10(Chem_1.mass_fractions_envelopes['NH3_coles_main_iso'][3])\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -640,14 +687,14 @@
      "text": [
       "12CO\n",
       "-3.324741226232965\n",
-      "-3.300858163985657\n",
+      "-3.3008581639856573\n",
       "-3.341966623201814\n",
       "-2.4796603389570757\n",
       "H2O\n",
       "-3.616702823778332\n",
       "-3.590215463540983\n",
       "-3.6367653645531375\n",
-      "-2.8083154715282372\n",
+      "-2.808315471528237\n",
       "CH4\n",
       "-4.916778826672724\n",
       "-4.8875426240591135\n",
@@ -708,10 +755,14 @@
     "        }\n",
     ")\n",
     "\n",
+    "#colors = ['C2', 'C3', 'C4', 'C8', 'C5', 'k', 'C0']\n",
+    "#labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$', r'NH$_3$', r'$^{13}$CO', r'CO$_2$', 'HCN']\n",
+    "#species = ['12CO', 'H2O', 'CH4', 'NH3', '13CO', 'CO2', 'HCN']\n",
+    "#for i, idx in enumerate([16,17,18,19,20,21,22]):\n",
+    "\n",
     "colors = ['C2', 'C3', 'C4', 'C8', 'C5']\n",
     "labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$', r'NH$_3$', r'$^{13}$CO']\n",
     "species = ['12CO', 'H2O', 'CH4', 'NH3', '13CO']\n",
-    "\n",
     "for i, idx in enumerate([16,17,18,19,20]):\n",
     "\n",
     "    median = param_quantiles[idx,3]\n",
@@ -760,7 +811,7 @@
     "ax_VMR.set(\n",
     "    yscale='log', ylim=(1e-6,1e2), ylabel=r'$P\\ (\\mathrm{bar})$', \n",
     "    xscale='log', xlim=(10**(-3.),10**(0.1)), xlabel=r'$\\mathrm{VMR}(X_i)\\ /\\ \\mathrm{VMR(^{12}CO)}$', \n",
-    "    #xscale='log', xlim=(10**(-8),10**(0.6)), xlabel=r'$\\mathrm{VMR}(X_i)\\ /\\ \\mathrm{VMR(^{12}CO)}$', \n",
+    "    #xscale='log', xlim=(10**(-5),10**(0.6)), xlabel=r'$\\mathrm{VMR}(X_i)\\ /\\ \\mathrm{VMR(^{12}CO)}$', \n",
     "    )\n",
     "ax_VMR.invert_yaxis()\n",
     "\n",
@@ -858,7 +909,8 @@
     "p = plot_hist1d(\n",
     "    ax_hist1d[2], Chem_1.C_ratio_posterior, \n",
     "    ec=posterior_color_1, fc=envelope_colors_1[1], \n",
-    "    xrange=C_ratio_range, bins=C_ratio_bins, ymarker=0.05, label=r'Free-chemistry'\n",
+    "    xrange=C_ratio_range, bins=C_ratio_bins, ymarker=0.05, \n",
+    "    label=r'Free-chemistry ($-$)'\n",
     "    )\n",
     "patches.append(p)\n",
     "\n",
@@ -885,7 +937,7 @@
     "    #label='Equilibrium chemistry\\n' + r'with $P_\\mathrm{quench}$'\n",
     "    #label='Quenched equilibrium\\nchemistry'\n",
     "    #label=r'Eq.-chem. ($P_\\mathrm{quench}$)'\n",
-    "    label=r'Quenched ($P_\\mathrm{quench}$)'\n",
+    "    label=r'Quenched ($P_\\mathrm{quench}$)'+'\\n'+r'($-3.4\\sigma$)'\n",
     "    )\n",
     "patches.append(p)\n",
     "\n",
@@ -910,7 +962,7 @@
     "    #label='Equilibrium chemistry\\n' + r'with $P_\\mathrm{quench}$'\n",
     "    #label='Quenched equilibrium\\nchemistry ' + r'($K_\\mathrm{zz}$)'\n",
     "    #label=r'Eq.-chem. ($K_\\mathrm{zz}$)'\n",
-    "    label=r'Quenched ($K_\\mathrm{zz}$)'\n",
+    "    label=r'Quenched ($K_\\mathrm{zz}$) '+'\\n'+r'($-5.3\\sigma$)'\n",
     "    )\n",
     "patches.append(p)\n",
     "\n",
@@ -921,7 +973,7 @@
     "    xrange=CO_range, bins=CO_bins, ymarker=0.2, \n",
     "    #label='Equilibrium chemistry\\n' + r'without $P_\\mathrm{quench}$'\n",
     "    #label='Un-quenched\\nequilibrium chemistry'\n",
-    "    label='Un-quenched\\neq.-chem.'\n",
+    "    label='Un-quenched\\neq.-chem. ' + r'($-29.0\\sigma$)'\n",
     "    )\n",
     "\n",
     "plot_hist1d(\n",
@@ -944,8 +996,7 @@
     "ax_hist1d[2].set(xticks=np.arange(100,600,100))\n",
     "\n",
     "ax_PT.legend(\n",
-    "    #loc='upper right', bbox_to_anchor=(1,0.7), handles=patches, \n",
-    "    loc='upper right', bbox_to_anchor=(1,0.67), handles=patches, \n",
+    "    loc='upper right', bbox_to_anchor=(1,0.69), handles=patches, \n",
     "    #framealpha=1, edgecolor='k', fancybox=False, \n",
     "    labelspacing=0.8, fontsize=9, handlelength=1.5, handleheight=0.9\n",
     "    )\n",
@@ -966,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1032,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_65685/959543868.py:6: RuntimeWarning: overflow encountered in power\n",
+      "/tmp/ipykernel_112724/959543868.py:6: RuntimeWarning: overflow encountered in power\n",
       "  [af.quantiles(10**posterior_4[:,i], q=q) \\\n",
       "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4573: RuntimeWarning: invalid value encountered in subtract\n",
       "  diff_b_a = subtract(b, a)\n"
@@ -1003,15 +1054,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_65685/1067655969.py:6: RuntimeWarning: overflow encountered in power\n",
-      "  [af.quantiles(10**posterior_1[:,i], q=q) \\\n"
+      "/tmp/ipykernel_112724/1067655969.py:6: RuntimeWarning: overflow encountered in power\n",
+      "  [af.quantiles(10**posterior_1[:,i], q=q) \\\n",
+      "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4573: RuntimeWarning: invalid value encountered in subtract\n",
+      "  diff_b_a = subtract(b, a)\n"
      ]
     }
    ],
@@ -1028,16 +1081,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3.300858163985657\n",
+      "-3.3008581639856573\n",
       "-3.590215463540983\n",
-      "-4.8875426240591135\n"
+      "-4.8875426240591135\n",
+      "-5.80076227828269\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -1046,12 +1111,12 @@
     "    figsize=(4,4), facecolor='none'\n",
     "    )\n",
     "\n",
-    "colors = ['C2', 'C3', 'C4']#, 'C8', 'C5']\n",
-    "labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$']#, r'NH$_3$', r'$^{13}$CO']\n",
-    "species = ['12CO', 'H2O', 'CH4']#, 'NH3', '13CO']\n",
-    "#colors = ['C2', 'C3', 'C4', 'C8']\n",
-    "#labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$', r'NH$_3$']\n",
-    "#species = ['12CO', 'H2O', 'CH4', 'NH3']\n",
+    "#colors = ['C2', 'C3', 'C4']#, 'C8', 'C5']\n",
+    "#labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$']#, r'NH$_3$', r'$^{13}$CO']\n",
+    "#species = ['12CO', 'H2O', 'CH4']#, 'NH3', '13CO']\n",
+    "colors = ['C2', 'C3', 'C4', 'C8']\n",
+    "labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$', r'NH$_3$']\n",
+    "species = ['12CO', 'H2O', 'CH4', 'NH3']\n",
     "\n",
     "for color_i, label_i, species_i in zip(colors, labels, species):\n",
     "    plot_VMR_profile(\n",
@@ -1074,8 +1139,9 @@
     "        'shrinkA':25, 'shrinkB':0, 'lw':1, 'color':envelope_colors_1[1], \n",
     "        }\n",
     ")\n",
-    "#for i, idx in enumerate([16,17,18,19]):\n",
-    "for i, idx in enumerate([16,17,18]):\n",
+    "#\n",
+    "#for i, idx in enumerate([16,17,18]):\n",
+    "for i, idx in enumerate([16,17,18,19]):\n",
     "\n",
     "    median = param_quantiles[idx,3]\n",
     "    xerr = np.abs(param_quantiles[idx,:]-median)\n",
@@ -1097,51 +1163,63 @@
     "    va='bottom', ha='right', color=colors[1], fontsize=9\n",
     ")\n",
     "ax.annotate(\n",
-    "    text=labels[2], xy=(10**(-5.20), y_1), xycoords=ax.get_xaxis_transform(), \n",
+    "    text=labels[2], xy=(10**(-5.22), y_1), xycoords=ax.get_xaxis_transform(), \n",
     "    va='bottom', ha='left', color=colors[2], fontsize=9\n",
+    ")\n",
+    "ax.annotate(\n",
+    "    text=labels[3], xy=(10**(-5.92), y_1), xycoords=ax.get_xaxis_transform(), \n",
+    "    va='bottom', ha='left', color=colors[3], fontsize=9\n",
     ")\n",
     "\n",
     "q = np.array([0.5-0.997/2, 0.5-0.95/2, 0.5-0.68/2, 0.5, 0.5+0.68/2, 0.5+0.95/2, 0.5+0.997/2])\n",
     "\n",
+    "# CO-CH4 Pquench\n",
     "median = 10**af.quantiles(posterior_2[:,18], q=q)[3]\n",
     "yerr = np.abs(10**af.quantiles(posterior_2[:,18], q=q)[[1,-2]] - median)\n",
     "\n",
-    "#ax.errorbar(\n",
-    "#    x=0.05, y=median, yerr=yerr[:,None], transform=ax.get_yaxis_transform(), \n",
-    "#    c=posterior_color_2, fmt='o', capthick=1, elinewidth=2, markersize=4, \n",
-    "#)\n",
+    "ax.errorbar(\n",
+    "    x=10**(-4.35), y=median, yerr=yerr[:,None], \n",
+    "    c=posterior_color_2, fmt='o', capthick=1, elinewidth=2, markersize=3, \n",
+    ")\n",
     "ax.annotate(\n",
-    "    text=r'$P_\\mathrm{quench,CO/CH_4}$', xy=(0.67, median+yerr[1]), \n",
-    "    xytext=(0.63, median+33), xycoords=ax.get_yaxis_transform(), \n",
-    "    va='center', ha='right', color=posterior_color_2, fontsize=9, \n",
-    "    arrowprops={\n",
-    "        'arrowstyle':'-', 'connectionstyle':'angle3,angleA=0,angleB=90', \n",
-    "        'shrinkA':0, 'shrinkB':2, \n",
-    "        'lw':1, 'color':posterior_color_2, 'alpha':0.4, \n",
-    "        }\n",
+    "    text=r'$P_\\mathrm{quench,CO/CH_4}$', xy=(10**(-3.92), median+yerr[1]), \n",
+    "    xytext=(10**(-3.7), 10**(1.75)), va='center', ha='right', color=posterior_color_2, fontsize=9, \n",
+    "    #arrowprops={\n",
+    "    #    'arrowstyle':'-', 'connectionstyle':'angle3,angleA=0,angleB=90', \n",
+    "    #    'shrinkA':0, 'shrinkB':2, \n",
+    "    #    'lw':1, 'color':posterior_color_2, 'alpha':0.4, \n",
+    "    #    }\n",
     ")\n",
     "\n",
-    "'''\n",
     "# NH3 Pquench\n",
     "median = 10**af.quantiles(posterior_2[:,19], q=q)[3]\n",
     "yerr = np.abs(10**af.quantiles(posterior_2[:,19], q=q)[[1,-2]] - median)\n",
     "\n",
     "ax.errorbar(\n",
-    "    x=0.05, y=median, yerr=yerr[:,None], transform=ax.get_yaxis_transform(), \n",
-    "    c=posterior_color_2, fmt='o', capthick=1, elinewidth=2, markersize=4, \n",
+    "    x=10**(-5.7), y=median, yerr=yerr[:,None], \n",
+    "    c=posterior_color_2, fmt='o', capthick=1, elinewidth=2, markersize=3, \n",
     ")\n",
-    "'''\n",
+    "ax.annotate(\n",
+    "    text=r'$P_\\mathrm{quench,NH_3}$', xy=(10**(-5.7), median), \n",
+    "    xytext=(10**(-5.65), 10**(0.1)), va='center', ha='left', color=posterior_color_2, fontsize=9, \n",
+    "    #arrowprops={\n",
+    "    #    'arrowstyle':'-', 'connectionstyle':'angle3,angleA=90,angleB=0', \n",
+    "    #    'shrinkA':0, 'shrinkB':5, \n",
+    "    #    'lw':1, 'color':posterior_color_2, 'alpha':0.4, \n",
+    "    #    }\n",
+    ")\n",
     "\n",
-    "#'''\n",
+    "'''\n",
     "ax.plot(\n",
-    "    [1e-10,1e-2], [median]*2, c=posterior_color_2, lw=1, ls='-'\n",
+    "    [10**(-5.3),10**(-3.1)], [median]*2, c=posterior_color_2, lw=1, ls='-'\n",
     "    )\n",
     "ax.fill_between(\n",
-    "    x=[1e-10,1e-2], y1=[median-yerr[0]]*2, y2=[median+yerr[1]]*2, \n",
+    "    x=[10**(-5.3),10**(-3.1)], y1=[median-yerr[0]]*2, y2=[median+yerr[1]]*2, \n",
     "    fc=envelope_colors_2[2], alpha=0.3, ec='none', #ec=colors[i], ls='--'\n",
     "    )\n",
-    "#'''\n",
+    "'''\n",
     "\n",
+    "'''\n",
     "ax_contr = ax.twiny()\n",
     "ax_contr.plot(\n",
     "    int_contr_em_2, PT_2.pressure, c=posterior_color_2, lw=1, ls='--'\n",
@@ -1150,10 +1228,11 @@
     "#    int_contr_em_1, PT_1.pressure, c=posterior_color_1, lw=1, ls='-'\n",
     "#    )\n",
     "ax_contr.set(xlim=(0, 4*int_contr_em_2.max()), xticks=[], yticks=[])\n",
+    "'''\n",
     "\n",
     "ax.set(\n",
     "    yscale='log', ylim=(1e-6,1e2), ylabel=r'$P\\ (\\mathrm{bar})$', \n",
-    "    xscale='log', xlim=(10**(-6),10**(-2.89)), xlabel=r'$\\mathrm{VMR}$', \n",
+    "    xscale='log', xlim=(10**(-6.2),10**(-2.89)), xlabel=r'$\\mathrm{VMR}$', \n",
     "    )\n",
     "ax.invert_yaxis()\n",
     "\n",
