--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -24,6 +24,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2607788811836915\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.exp(12)\n",
+    "p = np.real(np.exp(W((-1.0/(B*np.exp(1))),-1)))\n",
+    "sigma = np.sqrt(2)*erfcinv(p)\n",
+    "print(sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
