--- a/DENIS_J0255/figure_bestfit_spec.ipynb
+++ b/DENIS_J0255/figure_bestfit_spec.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
     "    }\n",
     "fig, ax = plt.subplots(\n",
     "    #figsize=(10,10), nrows=3*2+2, \n",
-    "    figsize=(10,7), nrows=2*2+1,\n",
+    "    figsize=(10,7), nrows=2*2+1,    \n",
     "    gridspec_kw=gridspec_kw\n",
     "    )\n",
     "\n",
@@ -143,10 +143,9 @@
     "        ax_res[0].plot(d_spec_1.wave[i,j], (d_spec_1.flux[i,j] - LogLike_1.f[i,j]*m_spec_1.flux[i,j]), c='k', lw=0.5)\n",
     "        ax_res[0].plot(d_spec_1.wave[i,j], 0*m_spec_1.flux[i,j], c=bestfit_color, lw=2)\n",
     "    \n",
+    "    errorbar_kwargs = {'elinewidth':1.8, 'capsize':2.8, 'capthick':1.8}\n",
     "    ax_res[0].errorbar(\n",
-    "        d_spec_1.wave[i].min()-2.5, [0], \n",
-    "        yerr=np.nanmean(d_spec_1.err[i]), \n",
-    "        c='k', elinewidth=1.3, capsize=1.5, capthick=1.3\n",
+    "        d_spec_1.wave[i].min()-3.5, [0], yerr=np.nanmean(d_spec_1.err[i]), c='k', **errorbar_kwargs\n",
     "        )\n",
     "    #yerr = np.nanmean(\n",
     "    #    np.concatenate([(LogLike_1.beta[i,k]**2 * Cov_1[i,k].cov).diagonal() for k in range(3)])\n",
@@ -156,8 +155,7 @@
     "        )\n",
     "    print(np.nanmean(d_spec_1.err[i]) / yerr)\n",
     "    ax_res[0].errorbar(\n",
-    "        d_spec_1.wave[i].min()-5.5, [0], yerr=yerr, \n",
-    "        c=bestfit_color, elinewidth=1.3, capsize=1.5, capthick=1.3\n",
+    "        d_spec_1.wave[i].min()-9.5, [0], yerr=yerr, c=bestfit_color, **errorbar_kwargs\n",
     "        )\n",
     "\n",
     "for i, order in enumerate(orders_for_zoom_in):\n",
@@ -172,9 +170,7 @@
     "        ax_res[i+1].plot(d_spec_1.wave[order,j], 0*m_spec_1.flux[order,j], c=bestfit_color, lw=2)\n",
     "        \n",
     "    ax_res[i+1].errorbar(\n",
-    "        d_spec_1.wave[order].min()-0.5, [0], \n",
-    "        yerr=np.nanmean(d_spec_1.err[order]), \n",
-    "        c='k', elinewidth=1.3, capsize=1.5, capthick=1.3\n",
+    "        d_spec_1.wave[order].min()-0.5, [0], yerr=np.nanmean(d_spec_1.err[order]), c='k', **errorbar_kwargs\n",
     "        )\n",
     "    #yerr = np.nanmean(\n",
     "    #    np.concatenate([(LogLike_1.beta[i,k]**2 * Cov_1[order,k].cov).diagonal() for k in range(3)])\n",
@@ -184,8 +180,7 @@
     "        )\n",
     "    print(yerr)\n",
     "    ax_res[i+1].errorbar(\n",
-    "        d_spec_1.wave[order].min()-0.8, [0], yerr=yerr, \n",
-    "        c=bestfit_color, elinewidth=1.3, capsize=1.5, capthick=1.3\n",
+    "        d_spec_1.wave[order].min()-1.05, [0], yerr=yerr, c=bestfit_color, **errorbar_kwargs\n",
     "        )\n",
     "    \n",
     "    x0 = ax_spec[i+1].get_xlim()[0]\n",
