--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +190,40 @@
     "# w/o NH3\n",
     "val = 0.114837422850997094E+07\n",
     "print(Z_to_sigma(ref, val), '\\n')\n",
+    "#print('-', Z_to_sigma(0.114842974384021712E+07, 0.114839820886577456E+07), '\\n')\n",
     "\n",
     "# w/o 13CO\n",
     "val = 0.114840089568577101E+07\n",
     "print(Z_to_sigma(ref, val), '\\n')\n",
+    "#print('-', Z_to_sigma(0.114842974384021712E+07, 0.114842351685945317E+07), '\\n')\n",
     "\n",
     "# HITEMP H2O line list\n",
     "val = 0.114808836839764006E+07\n",
     "print(Z_to_sigma(ref, val), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6.404011186910793\n",
+      "(0.0016549058054466854, nan) \n",
+      "\n",
+      "-1.2607654596213251\n",
+      "(0.28343698387533867, 1.7536436731772327)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# M&S2009 PT parameterisation\n",
+    "val = 0.114840974898657505E+07\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
+    "print(Z_to_sigma(0.114842974384021712E+07, 0.114843100460567675E+07))"
    ]
   },
   {
