--- a/Luhman_16/figures/_plot_J_band.ipynb
+++ b/Luhman_16/figures/_plot_J_band.ipynb
@@ -1821,7 +1821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crires_venv",
+   "display_name": "conda_env",
    "language": "python",
    "name": "python3"
   },
@@ -1835,7 +1835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
