--- a/Luhman_16/figures/plot_J_band_spectrum.ipynb
+++ b/Luhman_16/figures/plot_J_band_spectrum.ipynb
@@ -35,10 +35,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../retrieval_outputs/J_A_ret_21_1column_n1000/test_data\n",
-      "  analysing data from ../retrieval_outputs/J_A_ret_21_1column_n1000/test_.txt\n",
-      "../retrieval_outputs/J_B_ret_57_1column_n1000/test_data\n",
-      "  analysing data from ../retrieval_outputs/J_B_ret_57_1column_n1000/test_.txt\n"
+      "/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_A_ret_22_1column_n1000/test_data\n",
+      "  analysing data from /net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_A_ret_22_1column_n1000/test_.txt\n",
+      "/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_B_ret_62_1column_n1000/test_data\n",
+      "  analysing data from /net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_B_ret_62_1column_n1000/test_.txt\n"
      ]
     }
    ],
@@ -51,8 +51,8 @@
     "\n",
     "res_alpha = 0.85\n",
     "\n",
-    "A = result_utils.RetrievalResults('../retrieval_outputs/J_A_ret_21_1column_n1000/test_')\n",
-    "B = result_utils.RetrievalResults('../retrieval_outputs/J_B_ret_57_1column_n1000/test_')"
+    "A = result_utils.RetrievalResults('/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_A_ret_22_1column_n1000/test_')\n",
+    "B = result_utils.RetrievalResults('/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_B_ret_62_1column_n1000/test_')"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,10 +222,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def indicate_molecular_lines(ax, species, xlim, P_0, T_0, v_bary, **kwargs):\n",
+    "\n",
+    "    c_species = {'hf':'#FF59B4', 'feh':'#00DBA8', 'h2o':'C3', 'k':'C0', 'na':'C1'}[species]\n",
+    "    filename = f'/net/schenk/data2/regt/opacities_Sid/{species}.hdf5'\n",
+    "\n",
+    "    import h5py\n",
+    "    with h5py.File(filename, 'r') as f:\n",
+    "        P = f['P'][:]\n",
+    "        T = f['T'][:]\n",
+    "        \n",
+    "        idx_P = np.argmin(np.abs(10**(P-5.) - P_0))\n",
+    "        idx_T = np.argmin(np.abs(T - T_0))\n",
+    "        #print(f'Closest P: {10**(P[idx_P]-5.)} bar, T: {T[idx_T]} K')\n",
+    "\n",
+    "        wave = f['wave'][:] * 1e9\n",
+    "        mask_wave = (wave > xlim[0]) & (wave < xlim[1])\n",
+    "        wave = wave[mask_wave] * (1 + v_bary/3e5)\n",
+    "        \n",
+    "        cross_sec = 10**f['cross_sec'][mask_wave,idx_P,idx_T]\n",
+    "\n",
+    "    from scipy.signal import find_peaks\n",
+    "    peaks, *_ = find_peaks(cross_sec)\n",
+    "    if not peaks.size:\n",
+    "        return\n",
+    "\n",
+    "    mask = np.ones_like(peaks, dtype=bool)\n",
+    "    if len(peaks) > 10:\n",
+    "        mask = (cross_sec[peaks] > np.quantile(cross_sec[peaks], q=0.9))\n",
+    "    if not mask.any():\n",
+    "        return\n",
+    "\n",
+    "    for wave_i, cross_sec_i in zip(wave[peaks][mask], cross_sec[peaks][mask]):\n",
+    "        alpha = 1.0\n",
+    "        handle = ax.axvline(wave_i, alpha=alpha, c=c_species, **kwargs)\n",
+    "    \n",
+    "    return handle\n",
+    "\n",
+    "\n",
     "sigma_A = A.get_mean_scaled_uncertainty()\n",
     "sigma_B = B.get_mean_scaled_uncertainty()\n",
     "\n",
@@ -233,7 +271,6 @@
     "B.load_components(['LogLike'])\n",
     "\n",
     "for i in range(9):\n",
-    "\n",
     "\n",
     "    fig = plt.figure(figsize=(9,3.8))\n",
     "    gs = fig.add_gridspec(\n",
@@ -272,6 +309,11 @@
     "\n",
     "        ax[2].plot(B_wave_j, (B_flux_j - B_m_flux_j)/scale, c=color_B, lw=lw_d, alpha=res_alpha)\n",
     "        ax[2].plot(A_wave_j, (A_flux_j - A_m_flux_j)/scale, c=color_A, lw=lw_d, alpha=res_alpha)\n",
+    "\n",
+    "    if i == 7:\n",
+    "        ylim = ax[0].get_ylim()\n",
+    "        ylim = (ylim[0]*0.94, ylim[1])\n",
+    "        ax[0].set_ylim(ylim)\n",
     "\n",
     "    xlim = (\n",
     "        A.d_spec['J1226_1'].wave_ranges_orders_dets[i,0,0]-0.5, \n",
@@ -320,12 +362,14 @@
     "        # Change location of label\n",
     "        ha = 'right'; xy = (1-0.017,0.05)\n",
     "    \n",
-    "    ax[0].annotate(\n",
-    "        name_A, xy=xy, xycoords='axes fraction', ha=ha, va='bottom', c=color_A, fontsize=13, \n",
-    "        fontweight='bold', path_effects=[pe.withStroke(linewidth=2, foreground='w', alpha=0.8)]\n",
-    "        )\n",
     "    ax[1].annotate(\n",
     "        name_B, xy=xy, xycoords='axes fraction', ha=ha, va='bottom', c=color_B, fontsize=13, \n",
+    "        fontweight='bold', path_effects=[pe.withStroke(linewidth=2, foreground='w', alpha=0.8)]\n",
+    "        )\n",
+    "    if i == 7:\n",
+    "        xy = (0.017,0.14)\n",
+    "    ax[0].annotate(\n",
+    "        name_A, xy=xy, xycoords='axes fraction', ha=ha, va='bottom', c=color_A, fontsize=13, \n",
     "        fontweight='bold', path_effects=[pe.withStroke(linewidth=2, foreground='w', alpha=0.8)]\n",
     "        )\n",
     "\n",
@@ -333,11 +377,36 @@
     "    ax[0].set_ylabel(r'$F_\\lambda\\ \\mathrm{(erg\\ s^{-1}\\ cm^{-2}\\ nm^{-1})}$', y=0)\n",
     "    ax[-1].set(xlabel=r'Wavelength (nm)', ylabel='Residuals')\n",
     "\n",
+    "    if i == 7:\n",
+    "        indicate_molecular_lines(ax[0], 'h2o', xlim, P_0=1, T_0=1400, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0.02, ymax=0.065), \n",
+    "        indicate_molecular_lines(ax[0], 'feh', xlim, P_0=1, T_0=1400, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0.075, ymax=0.12)\n",
+    "        ax[0].annotate(\n",
+    "            r'$\\mathrm{H_2O}$', xy=(0.76,0.07), xycoords='axes fraction', ha='center', va='bottom', \n",
+    "            c='C3', fontsize=9, clip_on=False,\n",
+    "        )\n",
+    "        ax[0].annotate(\n",
+    "            r'$\\mathrm{FeH}$', xy=(0.42,0.12), xycoords='axes fraction', ha='center', va='bottom', \n",
+    "            c='#00DBA8', fontsize=9, clip_on=False,\n",
+    "        )\n",
+    "\n",
+    "        #indicate_molecular_lines(ax[1], 'h2o', xlim, P_0=1, T_0=1400, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0.93, ymax=0.98)\n",
+    "        #indicate_molecular_lines(ax[1], 'feh', xlim, P_0=1, T_0=1400, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0.88, ymax=0.93)\n",
+    "\n",
+    "        #indicate_molecular_lines(ax[0], 'k', xlim, P_0=1, T_0=1200, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0., ymax=1.)\n",
+    "        #indicate_molecular_lines(ax[0], 'na', xlim, P_0=1, T_0=1200, v_bary=A.d_spec['J1226_1'].v_bary, lw=0.8, ymin=0., ymax=1.)\n",
+    "\n",
     "    plt.subplots_adjust(left=0.09, bottom=0.12, top=0.94, right=0.98)\n",
     "    plt.savefig(f'./plots/J_band_spectrum_bestfit_order{i}_new.pdf')\n",
     "    #plt.show()\n",
     "    plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -345,6 +414,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
