--- a/Luhman_16/figures/plot_K_band_profiles.ipynb
+++ b/Luhman_16/figures/plot_K_band_profiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,14 @@
     "import matplotlib.patheffects as pe\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "\n",
+    "import corner\n",
+    "\n",
     "import result_utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,13 +38,24 @@
     "name_A = 'Luhman 16A'; name_B = 'Luhman 16B'\n",
     "color_A = '#FF622E'; color_B = '#396ED8'\n",
     "\n",
+    "cmap = mpl.colors.LinearSegmentedColormap.from_list('', ['w',color_A])\n",
+    "env_colors_A = cmap([0,1/4,2/4,3/4,1])\n",
+    "env_colors_A[:,3] = 0.5; env_colors_A[0,3] = 0.0\n",
+    "\n",
+    "cmap = mpl.colors.LinearSegmentedColormap.from_list('', ['w',color_B])\n",
+    "env_colors_B = cmap([0,1/4,2/4,3/4,1])\n",
+    "env_colors_B[:,3] = 0.5; env_colors_B[0,3] = 0.0\n",
+    "\n",
     "lw_d = 0.8\n",
     "lw_m = 1.0\n",
     "\n",
     "res_alpha = 0.85\n",
     "\n",
-    "A = result_utils.RetrievalResults('../retrieval_outputs/freechem_K_A_ret_2/test_')\n",
-    "B = result_utils.RetrievalResults('../retrieval_outputs/freechem_K_B_ret_2/test_')"
+    "path = '/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs'\n",
+    "A = result_utils.RetrievalResults(f'{path}/freechem_K_A_ret_5/test_')\n",
+    "B = result_utils.RetrievalResults(f'{path}/freechem_K_B_ret_6/test_')\n",
+    "A_eq = result_utils.RetrievalResults(f'{path}/freechem_K_A_ret_5/test_')\n",
+    "B_eq = result_utils.RetrievalResults(f'{path}/eqchem_K_B_ret_1/test_')"
    ]
   },
   {
