--- a/Luhman_16/figures/plot_K_band_chem_ratios.ipynb
+++ b/Luhman_16/figures/plot_K_band_chem_ratios.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -378,39 +378,76 @@
       "$-7.27^{+0.02}_{-0.02}$ & $-7.45^{+0.03}_{-0.03}$ \\\\\n",
       "$-8.50^{+2.64}_{-3.05}$ & $-5.37^{+0.09}_{-0.10}$ \\\\\n",
       "$-9.91^{+2.27}_{-2.27}$ & $-10.12^{+2.23}_{-2.21}$ \\\\\n",
+      "--------------------\n",
       "$5.00^{+0.02}_{-0.02}$ & $4.74^{+0.02}_{-0.02}$ \\\\\n",
       "$14.72^{+0.02}_{-0.02}$ & $24.79^{+0.05}_{-0.05}$ \\\\\n",
-      "$-0.52^{+1.76}_{-6.12}$ & $-0.28^{+4.99}_{-6.34}$ \\\\\n",
+      "$17.21^{+0.02}_{-0.01}$ & $19.75^{+0.03}_{-0.03}$ \\\\\n",
+      "--------------------\n",
       "$0.23^{+0.06}_{-0.07}$ & $0.22^{+0.07}_{-0.07}$ \\\\\n",
       "$0.33^{+0.01}_{-0.01}$ & $0.22^{+0.02}_{-0.02}$ \\\\\n",
-      "$0.05^{+0.00}_{-0.00}$ & $0.09^{+0.00}_{-0.00}$ \\\\\n",
+      "$0.051^{+0.001}_{-0.001}$ & $0.091^{+0.002}_{-0.002}$ \\\\\n",
       "$0.29^{+0.02}_{-0.02}$ & $0.28^{+0.01}_{-0.01}$ \\\\\n",
       "$0.15^{+0.10}_{-0.09}$ & $0.05^{+0.06}_{-0.04}$ \\\\\n",
       "$0.02^{+0.02}_{-0.02}$ & $-0.24^{+0.03}_{-0.03}$ \\\\\n",
-      "$1289.81^{+6.86}_{-5.86}$ & $1148.90^{+10.83}_{-10.28}$ \\\\\n",
-      "$1.35^{+0.15}_{-0.13}$ & $0.55^{+0.05}_{-0.03}$ \\\\\n",
+      "$1290^{+7}_{-6}$ & $1149^{+11}_{-10}$ \\\\\n",
       "$0.83^{+0.05}_{-0.06}$ & $1.62^{+0.22}_{-0.27}$ \\\\\n",
+      "$1.35^{+0.15}_{-0.13}$ & $0.55^{+0.05}_{-0.03}$ \\\\\n",
+      "--------------------\n",
       "$-1.12^{+0.05}_{-0.05}$ & $-4.52^{+3.34}_{-3.15}$ \\\\\n",
       "$0.64^{+0.04}_{-0.05}$ & $1.59^{+0.52}_{-0.56}$ \\\\\n",
       "$1.01^{+0.01}_{-0.01}$ & $10.68^{+5.28}_{-5.33}$ \\\\\n",
-      "$0.20^{+0.00}_{-0.00}$ & $0.12^{+0.00}_{-0.00}$ \\\\\n",
-      "$-1.30^{+0.00}_{-0.00}$ & $-1.35^{+0.01}_{-0.00}$ \\\\\n"
+      "--------------------\n",
+      "$0.198^{+0.005}_{-0.005}$ & $0.124^{+0.005}_{-0.005}$ \\\\\n",
+      "$-1.300^{+0.005}_{-0.001}$ & $-1.351^{+0.010}_{-0.004}$ \\\\\n"
      ]
     }
    ],
    "source": [
     "indices = [\n",
-    "    'log_H2O', 'log_H2(18)O', 'log_H2(17)O', 'log_12CO', 'log_13CO', 'log_C18O', 'log_C17O', 'log_CH4', 'log_NH3', 'log_H2S', 'log_HF', 'log_CO2', 'log_HCN', \n",
-    "    'log_g', 'vsini', 'v_rad', \n",
-    "    'dlnT_dlnP_0', 'dlnT_dlnP_1', 'dlnT_dlnP_2', 'dlnT_dlnP_3', 'dlnT_dlnP_4', 'log_P_phot', 'T_phot', 'd_log_P_phot+1', 'd_log_P_phot-1', \n",
-    "    'log_opa_base_gray', 'log_P_base_gray', 'f_sed_gray', \n",
-    "    'log_a', 'log_l'\n",
+    "    ('log_H2O', 2), \n",
+    "    'log_H2(18)O', \n",
+    "    'log_H2(17)O', \n",
+    "    ('log_12CO', 2), \n",
+    "    'log_13CO', \n",
+    "    'log_C18O', \n",
+    "    'log_C17O', \n",
+    "    'log_CH4', \n",
+    "    'log_NH3', \n",
+    "    'log_H2S', \n",
+    "    'log_HF', \n",
+    "    'log_CO2', \n",
+    "    'log_HCN', \n",
+    "    '-----', \n",
+    "    'log_g', \n",
+    "    'vsini', \n",
+    "    'rv', \n",
+    "    '-----', \n",
+    "    'dlnT_dlnP_0', \n",
+    "    'dlnT_dlnP_1', \n",
+    "    ('dlnT_dlnP_2', 3), \n",
+    "    'dlnT_dlnP_3', \n",
+    "    'dlnT_dlnP_4', \n",
+    "    'log_P_phot', \n",
+    "    ('T_phot', 0), \n",
+    "    'd_log_P_phot-1', \n",
+    "    'd_log_P_phot+1', \n",
+    "    '-----', \n",
+    "    'log_opa_base_gray', \n",
+    "    'log_P_base_gray', \n",
+    "    'f_sed_gray', \n",
+    "    '-----', \n",
+    "    ('log_a', 3), \n",
+    "    ('log_l', 3), \n",
     "]\n",
     "for item in indices:\n",
     "    decimals = 2\n",
     "    if isinstance(item, tuple):\n",
     "        decimals = item[1]\n",
     "        item = item[0]\n",
+    "\n",
+    "    if item.startswith('-'):\n",
+    "        print('-'*20)\n",
+    "        continue\n",
     "\n",
     "    idx = A.ParamTable.get(item, key='idx_free')\n",
     "    result_utils.latex_format(A.posterior[:,idx], B.posterior[:,idx], decimals=decimals)"
