--- a/Luhman_16/figures/plot_J_band_CCF.ipynb
+++ b/Luhman_16/figures/plot_J_band_CCF.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/net/lem/data1/regt/retrieval_base/Luhman_16/figures\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -20,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_A_ret_22_1column_n1000/test_data\n",
+      "  analysing data from /net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_A_ret_22_1column_n1000/test_.txt\n",
+      "/net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_B_ret_62_1column_n1000/test_data\n",
+      "  analysing data from /net/schenk/data2/regt/data_backup/Luhman_16/retrieval_outputs/J_B_ret_62_1column_n1000/test_.txt\n"
+     ]
+    }
+   ],
    "source": [
     "name_A = 'Luhman 16A'; name_B = 'Luhman 16B'\n",
     "color_A = '#FF622E'; color_B = '#396ED8'\n",
@@ -38,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +272,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████| 2001/2001 [02:11<00:00, 15.25it/s]                                                                                                                                                     \n"
+     ]
+    }
+   ],
    "source": [
     "#width = 6.2\n",
     "#xlims = [(wave_cen-width/2, wave_cen+width/2) for wave_cen in [1262.7, 1275.8]]\n",
@@ -263,11 +290,12 @@
     "xlims = [(wave_cen-width/2, wave_cen+width/2) for wave_cen in [1262.6, 1278.3]]\n",
     "\n",
     "m_set, m_spec_complete, m_spec_to_subtract, _, rv, CCF, CCF_SNR = get_CCF(A, '1H-19F__Coxon-Hajig')\n",
-    "plot_detection_analysis(\n",
-    "    'Luhman 16A', 'HF', A, m_set, m_spec_complete, m_spec_to_subtract, \n",
-    "    c_species='#FF59B4', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.75,0.99)]*2, \n",
-    "    res_ylim=(-5.5e-15,0.5e-15), CCF_ylim=(-3,6), \n",
-    "    )"
+    "# plot_detection_analysis(\n",
+    "#     'Luhman 16A', 'HF', A, m_set, m_spec_complete, m_spec_to_subtract, \n",
+    "#     c_species='#FF59B4', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.75,0.99)]*2, \n",
+    "#     res_ylim=(-5.5e-15,0.5e-15), CCF_ylim=(-3,6), \n",
+    "#     )\n",
+    "np.savez('./CCF_HF_Luhman_16A', rv, CCF, CCF_SNR)"
    ]
   },
   {
@@ -279,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████| 2001/2001 [01:18<00:00, 25.49it/s]                                                                                                                                                     \n"
+      "100%|████████████████████| 2001/2001 [02:07<00:00, 15.67it/s]                                                                                                                                                     \n"
      ]
     }
    ],
@@ -292,38 +320,48 @@
     "#     'Luhman 16B', 'HF', B, m_set, m_spec_complete, m_spec_to_subtract, \n",
     "#     c_species='#FF59B4', c_d='k', c_m=color_B, xlims=xlims, ylims=[(1.05,1.4)]*2, \n",
     "#     res_ylim=(-5.5e-15,0.5e-15), CCF_ylim=(-4,7.5), \n",
-    "#     )"
+    "#     )\n",
+    "np.savez('./CCF_HF_Luhman_16B', rv, CCF_HF, CCF_SNR_HF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#width = 6.2\n",
-    "width = 4.0\n",
-    "xlims = [(wave_cen-width/2, wave_cen+width/2) for wave_cen in [1210.1, 1235.2]]\n",
-    "\n",
-    "m_set, m_spec_complete, m_spec_to_subtract, _, rv, CCF, CCF_SNR = get_CCF(A, '56Fe-1H__MoLLIST')\n",
-    "plot_detection_analysis(\n",
-    "    'Luhman 16A', 'FeH', A, m_set, m_spec_complete, m_spec_to_subtract, \n",
-    "    c_species='#00DBA8', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.65,0.94)]*2, \n",
-    "    #c_species='#00DB58', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.65,0.94)]*2, \n",
-    "    res_ylim=(-8e-15,0.7e-15), CCF_ylim=(-5,11.5), \n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████| 2001/2001 [01:18<00:00, 25.37it/s]                                                                                                                                                     \n"
+      "100%|████████████████████| 2001/2001 [02:05<00:00, 15.93it/s]                                                                                                                                           \n"
+     ]
+    }
+   ],
+   "source": [
+    "#width = 6.2\n",
+    "width = 4.0\n",
+    "xlims = [(wave_cen-width/2, wave_cen+width/2) for wave_cen in [1210.1, 1235.2]]\n",
+    "\n",
+    "m_set, m_spec_complete, m_spec_to_subtract, _, rv, CCF, CCF_SNR = get_CCF(A, '56Fe-1H__MoLLIST')\n",
+    "# plot_detection_analysis(\n",
+    "#     'Luhman 16A', 'FeH', A, m_set, m_spec_complete, m_spec_to_subtract, \n",
+    "#     c_species='#00DBA8', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.65,0.94)]*2, \n",
+    "#     #c_species='#00DB58', c_d='k', c_m=color_A, xlims=xlims, ylims=[(0.65,0.94)]*2, \n",
+    "#     res_ylim=(-8e-15,0.7e-15), CCF_ylim=(-5,11.5), \n",
+    "#     )\n",
+    "np.savez('./CCF_FeH_Luhman_16A', rv, CCF, CCF_SNR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████| 2001/2001 [02:06<00:00, 15.79it/s]                                                                                                                                           \n"
      ]
     }
    ],
@@ -338,7 +376,8 @@
     "#     c_species='#00DBA8', c_d='k', c_m=color_B, xlims=xlims, ylims=[(0.8,1.28)]*2, \n",
     "#     #c_species='#00DB58', c_d='k', c_m=color_B, xlims=xlims, ylims=[(0.8,1.28)]*2, \n",
     "#     res_ylim=(-8e-15,0.7e-15), CCF_ylim=(-5.5,10), \n",
-    "#     )"
+    "#     )\n",
+    "np.savez('./CCF_FeH_Luhman_16B', rv, CCF_FeH, CCF_SNR_FeH)"
    ]
   },
   {
@@ -546,18 +585,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.2"
   }
  },
  "nbformat": 4,
